# Corax

./: .dockerignore  .env.docker.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  README.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.2.0.md  dev.bat  docker-compose.yml  inventory-agent.spec  package-lock.json  package.json  playwright.config.ts  pw-check.mjs  pyproject.toml  run.py  start_all.bat  start_all.py  start_https.bat  tsconfig.playwright.json  update.sh  АРХИТЕКТУРА_ПРОЕКТА.md
.github/workflows/: ci.yml
agent/: autostart_schedule.bat
agent/cpp/: CMakeLists.txt  README.md
agent/cpp/include/: collect.hpp  collect_extra.hpp  config.hpp  http.hpp  json_writer.hpp  osdetect.hpp  ui_splash.hpp  util.hpp  wmi.hpp
agent/cpp/prebuilt/: README.md
agent/cpp/src/: collect.cpp  collect_extra.cpp  config.cpp  config_slot_seed.inc  http.cpp  json_writer.cpp  main.cpp  osdetect.cpp  ui_splash.cpp  util.cpp  wmi.cpp
agent/python/: BUILD_EXE.md  agent.py  collect_printers.ps1  corax_gui.py  (+3 more)
backend/: .env.example  open_firewall_port.bat  requirements.txt  start_server.bat
deploy/: DOCKER.md  README.md  corax-backend.service  corax-frontend.service
e2e/: app.spec.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: ensure_docker_env.py  ensure_postgres.py  fix_pg_sequences.py  generate_agent_token.py  install-corax-ca.bat  install-corax-ca.sh  migrate_sqlite_to_postgres.py  run_python.js  setup-https.sh
tools/: diagnose_glpi_monitors_links.py  purge_diagrams_from_inventory_db.py  set_user_password.py  setup_agent_env.py  setup_bitrix_bot_env.py  train_v10_optuna.py
(+219 files in other folders)
